# algorithms

./: .gitignore  CMakeLists.txt  Main.java  README.md  main.cpp  main.java  main.py  more.py  pom.xml
MISC/b-tree/: b树的删除.pptx
MISC/get_biTree_height/: GetBiTreeHeight.py  README.md
MISC/recursion_elimination/: recursion_elimination.cpp  recursion_elimination.md
PTA/: README.md
PTA/1001/: A+B Format.cpp  A_plus_B_Format.cpp
PTA/1002/: A_plus_B_for_Polynomials.py  README.md  right.py
PTA/PTA/: LookAndSaySequence.py  README.md  data.json
PTA/PTA1001/: A_plus_B_Format.cpp  A_plus_B_Format.py  README.md
PTA/PTA1002/: A_plus_B_for_Polynomials.cpp  A_plus_B_for_Polynomials.py  README.md  data.json
PTA/PTA1003/: Emergency.java  Emergency.py  EmergencySlim.java  README.md  data.json
PTA/PTA1004/: CountingLeaves.cpp  CountingLeaves.py  README.md  Slim.cpp  data.json
PTA/PTA1005/: README.md  SpellItRight.py
PTA/PTA1006/: README.md  SignInandSignOut.py  data.json
PTA/PTA1007/: MaximumSubsequenceSum.py  README.md  data.json
PTA/PTA1008/: Elevator.py  README.md  data.json
PTA/PTA1010/: README.md  Radix.py  data.json
PTA/PTA1011/: README.md  WorldCupBetting.py  data.json
PTA/PTA1012/: README.md  TheBestRank.cpp  TheBestRank.py  data.json  example.cpp
PTA/PTA1013/: BattleOverCities.cpp  BattleOverCities.py  README.md  data.json
PTA/PTA1014/: README.md  WaitingInLine.cpp  WaitingInLine.h  WaitingInLine.py  data.json
PTA/PTA1015/: README.md  data.json
PTA/PTA1016/: PhoneBills.cpp  PhoneBills.py  README.md  data.json
PTA/PTA1018/: PublicBikeManagement.cpp  PublicBikeManagement.py  README.md  data.json
PTA/PTA1020/: README.md  TreeTraversals.py  data.json
PTA/PTA1021/: DeepestRoot.cpp  README.md  data.json  testReserve.cpp
PTA/PTA1023/: HaveFunwithNumbers.py  README.md  data.json
PTA/PTA1024/: PalindromicNumber.py  PalindromicNumber2.py  README.md  data.json
PTA/PTA1025/: PATRanking.py  README.md  data.json
PTA/PTA1028/: ListSorting.cpp  ListSorting.h  ListSorting.py  README.md  data.json
PTA/PTA1030/: README.md  TravelPlan.py  data.json
PTA/PTA1032/: README.md  Sharing.cpp  Sharing.py  Sharing2.cpp  data.json
PTA/PTA1033/: README.md  ToFillOrNotToFill .py  ToFillOrNotToFill.cpp  data.json
PTA/PTA1034/: HeadOfAGang.cpp  README.md  data.json
PTA/PTA1035/: Password.py  README.md  data.json
PTA/PTA1036/: BoysvsGirls.py  README.md  data.json
PTA/PTA1043/: IsBinarySearchTree.py  README.md  TestNode.py  data.json
PTA/PTA1044/: README.md  ShoppingInMars.cpp  ShoppingInMars.py  data.json
PTA/PTA1051/: PopSequence.py  README.md  data.json
PTA/PTA1052/: LinkedListSorting.cpp  LinkedListSorting.py  README.md  data.json
PTA/PTA1053/: PathOfEqualWeight.py  README.md  data.json
PTA/PTA1055/: README.md  TheWorldsRichest.cpp  TheWorldsRichest.h  TheWorldsRichest.py  data.json
PTA/PTA1056/: MiceandRice.py  README.md  data.json
PTA/PTA1057/: README.md  Stack.cpp  data.json
PTA/PTA1060/: AreTheyEqual.py  README.md  data.json
PTA/PTA1061/: Dating.py  README.md  data.json
PTA/PTA1062/: README.md  TalentandVirtue.cpp  TalentandVirtue.h  data.json
PTA/PTA1064/: CompleteBinarySearchTree.py  README.md  data.json
PTA/PTA1066/: README.md  RootOfAVLTree.py  Test.py  data.json
PTA/PTA1072/: GasStation.cpp  README.md  data.json
PTA/PTA1073/: README.md  ScientificNotation.py  data.json
PTA/PTA1074/: README.md  ReversingLinkedList.cpp  ReversingLinkedList.py  data.json
PTA/PTA1075/: PATJudge.cpp  PATJudge.h  README.md  data.json
PTA/PTA1076/: ForwardsOnWeibo.cpp  README.md  data.json
PTA/PTA1077/: Kuchiguse.py  README.md  data.json
PTA/PTA1079/: README.md  TotalSalesOfSupplyChain.cpp  TotalSalesOfSupplyChain.h  TotalSalesOfSupplyChain.py  data.json
PTA/PTA1080/: GraduateAdmission.cpp  GraduateAdmission.h  GraduateAdmission.py  README.md
PTA/PTA1082/: README.md  ReadNumberinChinese.py  data.json
PTA/PTA1083/: ListGrades.cpp  ListGrades.h  ListGrades.py  README.md  data.json
PTA/PTA1085/: PerfectSequence.cpp  README.md  data.json
PTA/PTA1086/: README.md  TreeTraversalsAgain.py  data.json
PTA/PTA1087/: AllRoadsLeadToRome.cpp  README.md  data.json
PTA/PTA1090/: HighestPriceInSupplyChain.cpp  README.md  data.json  (+1 more)
examples/: exampleForMain.cpp
utils/: tools.java  utils.cpp  utils.h
(+147 files in other folders)
